[gd_scene load_steps=29 format=2]

[ext_resource path="res://décor/Portal_red.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Décors/Portail_v2.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Décors/mask_vortex_portail.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Décors/vortex.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Décors/PJ_respawn_icon.png" type="Texture" id=5]
[ext_resource path="res://Graphics/interface/number_red/number0.png" type="Texture" id=6]
[ext_resource path="res://Graphics/interface/number_red/number1.png" type="Texture" id=7]
[ext_resource path="res://Graphics/interface/number_red/number2.png" type="Texture" id=8]
[ext_resource path="res://Graphics/interface/number_red/number3.png" type="Texture" id=9]
[ext_resource path="res://Graphics/interface/number_red/number4.png" type="Texture" id=10]
[ext_resource path="res://Graphics/interface/number_red/number5.png" type="Texture" id=11]
[ext_resource path="res://Graphics/interface/number_red/number6.png" type="Texture" id=12]
[ext_resource path="res://Graphics/interface/number_red/number7.png" type="Texture" id=13]
[ext_resource path="res://Graphics/interface/number_red/number8.png" type="Texture" id=14]
[ext_resource path="res://Graphics/interface/number_red/number9.png" type="Texture" id=15]
[ext_resource path="res://Graphics/interface/Vie_Portal/explo_portal1.png" type="Texture" id=16]
[ext_resource path="res://Graphics/interface/Vie_Portal/explo_portal2.png" type="Texture" id=17]
[ext_resource path="res://Graphics/interface/Vie_Portal/explo_portal3.png" type="Texture" id=18]
[ext_resource path="res://Graphics/interface/Vie_Portal/explo_portal4.png" type="Texture" id=19]
[ext_resource path="res://Graphics/interface/Vie_Portal/explo_portal5.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 1 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 45, 80 )

[node name="Portal_red" type="Area2D"]
scale = Vector2( 3, 3 )
monitorable = false
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="portal" type="AnimatedSprite" parent="."]
light_mask = -2147483648
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="portal"]
light_mask = 0
texture = ExtResource( 3 )
mode = 3
range_item_cull_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="vortex" type="AnimatedSprite" parent="portal/Light2D"]
show_behind_parent = true
light_mask = 4
position = Vector2( -1, 12 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="portal/Light2D/vortex"]
root_node = NodePath(".")
anims/vortex = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="strairs" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -61, 80, -59, 77, -55, 77, -51, 73, -49, 73, -45, 69, 45, 69, 49, 73, 51, 73, 55, 77, 58, 77, 61, 80 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="PJ_respawn_spr" type="AnimatedSprite" parent="."]
position = Vector2( -0.586003, -90 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 4 )
animation = "on"
__meta__ = {
"_edit_lock_": true
}

[node name="num_1" type="AnimatedSprite" parent="PJ_respawn_spr"]
position = Vector2( 8.82167, -25 )
frames = SubResource( 5 )

[node name="num_2" type="AnimatedSprite" parent="PJ_respawn_spr"]
position = Vector2( -7.845, -25 )
frames = SubResource( 6 )
animation = "off"

[node name="explo" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2, 11 )
frames = SubResource( 7 )
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="center" type="Position2D" parent="."]
position = Vector2( -1, 12 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="." to="." method="_on_Portal_red_body_entered"]
